url: allow brackets in path part

As brackets are separators only within the authority part, thier use
within (or on the edges of) the path does not create any ambiguity.

(cherry picked from commit 721751d4f8f902ce042ffd015c70134aba373a2b)

Fixes #26092
Fixes #26348